--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/img/Mediamodifier-Design.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
